Bug 79935 - REGRESSION: <content> element is not HTMLUnknownElement when Shadow DOM API is disabled
Summary: REGRESSION: <content> element is not HTMLUnknownElement when Shadow DOM API i...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: DOM (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Hajime Morrita
URL: http://jsfiddle.net/dglazkov/dmXVf/
Keywords:
Depends on: 80229 80237 80257
Blocks: 76434
  Show dependency treegraph
 
Reported: 2012-02-29 12:53 PST by Dimitri Glazkov (Google)
Modified: 2012-03-06 21:30 PST (History)
6 users (show)

See Also:


Attachments
Patch (12.76 KB, patch)
2012-03-05 17:28 PST, Hajime Morrita
no flags Details | Formatted Diff | Diff
Patch (17.82 KB, patch)
2012-03-06 00:44 PST, Hajime Morrita
no flags Details | Formatted Diff | Diff
Patch (17.85 KB, patch)
2012-03-06 02:03 PST, Hajime Morrita
no flags Details | Formatted Diff | Diff
Patch for landing (17.92 KB, patch)
2012-03-06 17:04 PST, Hajime Morrita
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Dimitri Glazkov (Google) 2012-02-29 12:53:01 PST
Even when the shadow DOM API is disabled, the <content> element exhibits traits of something other than HTMLUnknownElement: http://jsfiddle.net/dglazkov/dmXVf/
Comment 1 Hajime Morrita 2012-03-01 23:29:35 PST
I'm working on this.
Comment 2 Hajime Morrita 2012-03-05 17:28:51 PST
Created attachment 130246 [details]
Patch
Comment 3 Build Bot 2012-03-05 17:51:22 PST
Comment on attachment 130246 [details]
Patch

Attachment 130246 [details] did not pass mac-ews (mac):
Output: http://queues.webkit.org/results/11837079
Comment 4 Build Bot 2012-03-05 18:38:56 PST
Comment on attachment 130246 [details]
Patch

Attachment 130246 [details] did not pass win-ews (win):
Output: http://queues.webkit.org/results/11833099
Comment 5 Early Warning System Bot 2012-03-05 19:03:19 PST
Comment on attachment 130246 [details]
Patch

Attachment 130246 [details] did not pass qt-ews (qt):
Output: http://queues.webkit.org/results/11832096
Comment 6 Gyuyoung Kim 2012-03-05 22:32:41 PST
Comment on attachment 130246 [details]
Patch

Attachment 130246 [details] did not pass efl-ews (efl):
Output: http://queues.webkit.org/results/11839156
Comment 7 Hajime Morrita 2012-03-06 00:44:13 PST
Created attachment 130321 [details]
Patch
Comment 8 Early Warning System Bot 2012-03-06 01:37:45 PST
Comment on attachment 130321 [details]
Patch

Attachment 130321 [details] did not pass qt-ews (qt):
Output: http://queues.webkit.org/results/11839242
Comment 9 Build Bot 2012-03-06 01:44:49 PST
Comment on attachment 130321 [details]
Patch

Attachment 130321 [details] did not pass win-ews (win):
Output: http://queues.webkit.org/results/11839243
Comment 10 Hajime Morrita 2012-03-06 02:03:17 PST
Created attachment 130339 [details]
Patch
Comment 11 Dimitri Glazkov (Google) 2012-03-06 09:01:13 PST
Comment on attachment 130339 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=130339&action=review

> Source/WebCore/ChangeLog:9
> +        which allows HTMLElementFactory and HTMLElementWrapperFacotry to check RuntimeEnabledFeatures

Facotry -> Factory

> Source/WebCore/html/HTMLTagNames.in:97
> +shadow interfaceName=HTMLShadowElement, conditional=SHADOW_DOM, runtimeFeature=shadowDOM

Adam already added runtimeConditional flag in http://trac.webkit.org/changeset/106603, so let's use that instead.
Comment 12 Dimitri Glazkov (Google) 2012-03-06 09:01:40 PST
Adam, Haraken -- could you take a look at the generator code?
Comment 13 Adam Barth 2012-03-06 10:55:01 PST
Comment on attachment 130339 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=130339&action=review

This looks fine.  make_names.pl is something of a disaster file, but I haven't worked up the steam to clean it up yet.

>> Source/WebCore/html/HTMLTagNames.in:97
>> +shadow interfaceName=HTMLShadowElement, conditional=SHADOW_DOM, runtimeFeature=shadowDOM
> 
> Adam already added runtimeConditional flag in http://trac.webkit.org/changeset/106603, so let's use that instead.

Yeah, I think runtimeConditional is a slightly better name.
Comment 14 Hajime Morrita 2012-03-06 16:10:23 PST
Dimitri, Adam, thanks for taking a look!

(In reply to comment #13)
> (From update of attachment 130339 [details])
> View in context: https://bugs.webkit.org/attachment.cgi?id=130339&action=review
> 
> This looks fine.  make_names.pl is something of a disaster file, but I haven't worked up the steam to clean it up yet.
True. People who don't know perl like me have made such a disaster...

> 
> >> Source/WebCore/html/HTMLTagNames.in:97
> >> +shadow interfaceName=HTMLShadowElement, conditional=SHADOW_DOM, runtimeFeature=shadowDOM
> > 
> > Adam already added runtimeConditional flag in http://trac.webkit.org/changeset/106603, so let's use that instead.
> 
> Yeah, I think runtimeConditional is a slightly better name.
Great! I'll rename it before landing.
Comment 15 Hajime Morrita 2012-03-06 17:04:45 PST
Created attachment 130479 [details]
Patch for landing
Comment 16 WebKit Review Bot 2012-03-06 21:29:57 PST
Comment on attachment 130479 [details]
Patch for landing

Clearing flags on attachment: 130479

Committed r110014: <http://trac.webkit.org/changeset/110014>
Comment 17 WebKit Review Bot 2012-03-06 21:30:03 PST
All reviewed patches have been landed.  Closing bug.