https://bugs.webkit.org/show_bug.cgi?id=79935 REGRESSION: <content> element is not HTMLUnknownElement when Shadow DOM API is disabled

Patch by Hajime Morrita <morrita@chromium.org> on 2012-03-06
Reviewed by Adam Barth.

.:

Added a newly exported symbol.

* Source/autotools/symbols.filter:

Source/WebCore:

This change introduced "runtimeConditional" keyword to make_name.pl sources,
which allows HTMLElementFactory and HTMLElementWrapperFactory to check RuntimeEnabledFeatures
and treat any tag name as HTMLUnknownElement if its definition has runtimeConditional and
the flag given is turned off.

Test: fast/dom/shadow/content-shadow-unknown.html

* WebCore.exp.in:
* dom/make_names.pl:
(defaultTagPropertyHash):
(printConstructorInterior):
(printFactoryCppFile):
(printWrapperFunctions):
(printWrapperFactoryCppFile):
* html/HTMLTagNames.in:
* html/shadow/HTMLContentElement.cpp:
(WebCore::contentTagName):
* testing/InternalSettings.cpp:
(WebCore::InternalSettings::InternalSettings):
(WebCore::InternalSettings::restoreTo):
(WebCore::InternalSettings::setShadowDOMEnabled):
(WebCore):
* testing/InternalSettings.h:
(InternalSettings):
* testing/InternalSettings.idl:

LayoutTests:

* fast/dom/resources/shadow-test-driver.js:
(createContentWithText):
* fast/dom/shadow/content-element-move.html: Replaced accidentaly used <content> using an Internals API.
* fast/dom/shadow/content-shadow-unknown-expected.txt: Added.
* fast/dom/shadow/content-shadow-unknown.html: Added.

Canonical link: https://commits.webkit.org/97632@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110014 268f45cc-cd09-0410-ab3c-d52691b4dbfc